--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "jest": "^27.2.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
